--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,43 +1,25 @@
 @import "base";
-@font-face { 
+@font-face {
     font-family: 'pt_sansregular';
-    src: url('../fonts/pts55f-webfont.eot');
-    src: url('../fonts/pts55f-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/pts55f-webfont.woff') format('woff'),
-         url('../fonts/pts55f-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-
+    src: url('../fonts/pts55f-webfont.woff') format('woff');
 }
 @font-face {
     font-family: 'pt_sansitalic';
-    src: url('../fonts/pts56f-webfont.eot');
-    src: url('../fonts/pts56f-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/pts56f-webfont.woff') format('woff'),
-         url('../fonts/pts56f-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-
+    src:  url('../fonts/pts56f-webfont.woff') format('woff');
 }
 @font-face {
     font-family: 'pt_sansbold';
-    src: url('../fonts/pts75f-webfont.eot');
-    src: url('../fonts/pts75f-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/pts75f-webfont.woff') format('woff'),
-         url('../fonts/pts75f-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-
+    src:  url('../fonts/pts75f-webfont.woff') format('woff');
 }
 @font-face {
     font-family: 'pt_sansbold_italic';
-    src: url('../fonts/pts76f-webfont.eot');
-    src: url('../fonts/pts76f-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/pts76f-webfont.woff') format('woff'),
-         url('../fonts/pts76f-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    src: url('../fonts/pts76f-webfont.woff') format('woff');
 }
+@font-face {
+    font-family : "DINPro-Bold";
+    src: url('../fonts/DINPro-Bold.woff') format('woff');
+}
+
 /* ------------------------------------- Reset css -------------------------------------------- */
 html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5,
 h6, p, blockquote, pre,a, abbr, acronym, address, big,
@@ -50,7 +32,7 @@ output, ruby, section, summary,time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
-    vertical-align: baseline;
+    vertical-align: baseline; 
 }
 body, html {
     height: 100%
@@ -110,7 +92,11 @@ body {
     background: #e1e1e1;
     height: 2000px;
 }
-
+a {
+    &:hover {
+        text-decoration: none;
+    }
+}
 .l-layout {
     margin: 0 auto -1px;
     position: relative;
@@ -122,10 +108,428 @@ body {
     clear: both;
     height: 1px;
 }
-.wrapper {
+.wrapper {  
     overflow: hidden;
-}
+} 
 .wrap {
     @extend %clr;
 }
-/* ------------------------------------ //END Main styles --------------------------------------- */
+.sidebar {
+    float: left;
+    width: 150px;
+    height: 500px;
+}
+.main {
+    padding: 0 16px 0 11px;
+    overflow: hidden;
+    background: #ececec;
+    height: 500px;
+}
+
+.header {
+    @extend %clr;
+    background: #000;
+    height: 45px;
+    border-bottom: 1px solid #fff;
+}
+.header__nav {
+    float: left;
+    padding: 9px 0 0 161px;
+    a {
+       display: inline-block;
+       margin-right: 7px;
+       height: 26px;
+       line-height: 26px;
+       padding: 0 10px; 
+       color: #fff;
+       text-decoration: none;
+       @include background-image(linear-gradient(#5d5d5d, #464646));
+       @include border-radius(2px);
+       &:hover {
+           @include background-image(linear-gradient(#464646, #5d5d5d));
+       }
+       &:active {
+           @include box-shadow(inset 0 0 2px #000);
+       }
+    }
+    .active {
+        @include background-image(linear-gradient(#00bd00, #00ad00));
+        &:hover {
+           @include background-image(linear-gradient(#00ad00, #00bd00));
+       }
+    }
+}
+.header__main {
+    float: right;
+    @extend %clr;
+    padding-right: 16px;
+}
+.header__search {
+    float: left;
+    position: relative;
+    margin-top: 9px;
+    width: 227px;
+    &:after {
+        content: "";
+        position: absolute;
+        right: -10px;
+        top: 6px;
+        @include sized-sprite($icons, separator);
+    }
+    input[type="text"] {
+        padding: 0 28px 0 10px;
+        width: 100%;
+        height: 26px;
+        color: #546166; 
+        font-size: 12px;
+        @include pts_r;
+        @include box-sizing(border-box);
+        @include border-radius(2px);
+        @include placeholder-color(#546166);
+        &:focus {
+            @include box-shadow(inset 0 0 0 2px #45bbe4, inset 0 0 6px 0 #000);
+        }
+    }
+    input[type="submit"] {
+        position: absolute;
+        right: 5px;
+        top: 4px;
+        @extend %hide-text;
+        @include sized-sprite($icons, glass);
+    }
+}
+.header__notific {
+    position: relative;
+    float: left;
+    margin: 14px 17px 0 20px;
+    height: 13px;
+    line-height: 16px;
+    padding: 0 6px;
+    background: #00b400;
+    font-size: 10px;
+    @include pts_b;
+    color: #fff;
+    &:after {
+        content: "";
+        position: absolute;
+        right: 4px;
+        bottom: -4px;
+        @include sized-sprite($icons, arr1);
+    }
+}
+.header__download {
+    position: relative;
+    float: left;
+    width: 43px;
+    height: 45px;
+    line-height: 39px;
+    text-align: center;
+    &:after {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 13px;
+        @include sized-sprite($icons, separator);
+    }
+    &:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 13px;
+        @include sized-sprite($icons, separator);
+    }
+    .counter {
+        display: inline-block;
+        vertical-align: middle;
+        width: 19px;
+        height: 19px;
+        line-height: 22px;
+        cursor: pointer;
+        font-size: 10px;
+        @include pts_b;
+        color: #fff;
+        border: 3px solid #0ba5dc;
+        @include border-radius(50%);
+        @include user-select(none);
+    }
+}
+.header__download.active {
+    background: #0ba5dc;
+    &:after,
+    &:before {
+         display: none;
+    }
+    .counter {
+        border-color: #fff;
+    }
+}
+.header__user {
+    float: left;
+    margin: 3px 0 0 10px;
+    a {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    img {
+        display: block;
+        border: 2px solid #fff;
+        @include border-radius(50%);
+    }
+    .set {
+        display: inline-block;
+        margin-left: 5px;
+        @include sized-sprite($icons, set);
+    }
+    .set_active {
+        @include sized-sprite($icons, set-act);
+    }
+}
+
+// dropdown downloads list
+.download-list {
+    display: none;
+    position: absolute;
+    top: 45px;
+    right: 0;
+    width: 325px;
+    line-height: 1;
+    @include box-sizing(border-box);
+    background: #5a5a5a;
+    text-align: left;
+    .icon {
+        cursor: pointer;
+    }
+}
+.download-list__title {
+    padding: 0 8px;
+    height: 32px;
+    line-height: 32px;
+    background: #0ba5dc;
+    @include mp_r;
+    font-size: 18px;
+    color: #fff;
+    text-shadow: 0 1px 0 #81d0ed;
+    .icon {
+        float: right;
+    }
+    .pause {
+        float: right;
+        margin-top: 5px;
+        padding: 2px;
+        border: 1px solid #81d0ed;
+        @include border-radius(50%);
+    }
+}
+.progress {
+    margin-bottom: 15px;
+    padding: 0 8px;
+    a {
+        color: #fff;
+    }
+    .meter {
+        display: inline-block;
+        vertical-align: middle;
+    }
+    .icon {
+        vertical-align: middle;
+    }
+    .icon_del {
+        margin-left: 7px;
+    }
+}
+.progress__video {
+    margin-bottom: 6px;
+}
+.progress__percent {
+    display: inline-block;
+    margin-right: 10px;
+    color: #fff;
+    @include din_b;
+    font-size: 12px;
+    vertical-align: middle;
+}
+.btn-watch {
+   float: right;
+   margin-top: -12px;
+   height: 30px;
+   line-height: 30px;
+   padding: 0 10px; 
+   color: #fff;
+   font-size: 15px;
+   @include pts_b;
+   text-decoration: none;
+   @include background-image(linear-gradient(#00c400, #00a300));
+   @include border-radius(2px);
+   &:hover {
+       @include background-image(linear-gradient(#00a300, #00c400));
+   }
+   &:active {
+       @include box-shadow(inset 0 0 2px #000);
+   }
+}
+.progress_cancel {
+    height: 30px;
+    font-size: 16px;
+    line-height: 30px;
+    background: #fadccb;
+    text-align: center;
+    border-bottom: 1px solid #d3a68c;
+    span {
+        display: inline-block;
+        margin-left: 14px;
+        color: #0ba5dc;
+        @include pts_b;
+        cursor: pointer;
+    }
+}
+.progress_done {
+    color: #cecece;
+}
+.progress_pause {
+    .meter, .progress__percent {
+        opacity: .2;
+    }
+}
+
+.download-list__all {
+    height: 30px;
+    line-height: 30px;
+    background: #484848;
+    text-align: center;
+    a {
+        color: #fff;
+        text-decoration: none;
+    }
+}
+/* ------------------------------------ //END Main styles -------------------------------------- */
+
+/* ------------------------------------ //END Blocks -------------------------------------- */
+.icon {
+    display: inline-block;
+    @include user-select(none);
+}
+.icon_pause {@include sized-sprite($icons, pause);}
+.icon_play {@include sized-sprite($icons, play);}
+.icon_del {@include sized-sprite($icons, del);}
+
+.meter { 
+    width: 224px;
+    height: 11px;  /* Can be anything */
+    position: relative;
+    background: #fff;
+    @include border-radius(20px);
+}
+.meter > span {
+    position: relative;
+    overflow: hidden;
+    display: block;
+    height: 100%;
+    @include border-radius(20px 0 0 20px);
+    @include background-image(linear-gradient(rgb(136,204,97) 37%, rgb(160,214,129) 69%));
+    @include box-shadow (inset 0 2px 9px  rgba(255,255,255,0.3), inset 0 -2px 6px rgba(0,0,0,0.4));   
+}
+.meter > span:after, .animate > span > span {
+    content: "";
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    bottom: 0; 
+    right: 0;
+    background-image: 
+       -webkit-gradient(linear, 0 0, 100% 100%, 
+          color-stop(.25, rgba(255, 255, 255, .2)), 
+          color-stop(.25, transparent), color-stop(.5, transparent), 
+          color-stop(.5, rgba(255, 255, 255, .2)), 
+          color-stop(.75, rgba(255, 255, 255, .2)), 
+          color-stop(.75, transparent), to(transparent)
+       );
+    z-index: 1;
+    @include background-size(50px, 50px);
+    -webkit-animation: move 2s linear infinite;
+    @include border-radius(20px 8px 8px 20px);
+    overflow: hidden;
+}
+.animate > span:after {
+    display: none;
+}
+@-webkit-keyframes move {
+    0% {
+       background-position: 0 0;
+    }
+    100% {
+       background-position: 50px 50px;
+    }
+}
+
+.nav-wrap {
+    @extend %clr;
+    padding-top: 8px; 
+}
+.nav {
+    padding-top: 5px;
+    float: left;
+    @extend %clr;
+    a {
+        float: left;
+        margin-right: 5px;
+        padding: 0 5px;
+        height: 25px;
+        line-height: 25px;
+        color: #fff;
+        text-decoration: none;
+        @include border-radius(2px);
+        @include background-image(linear-gradient(#5d5d5d, #464646));
+        &:hover {
+           @include background-image(linear-gradient(#464646, #5d5d5d));
+        }
+        &:active {
+           @include box-shadow(inset 0 0 3px #000);
+        }
+    }
+    .active {
+        @include background-image(linear-gradient(#00bd00, #00ad00));
+        &:hover {
+           @include background-image(linear-gradient(#00ad00, #00bd00));
+       }
+    }
+}
+.disk-space {
+    float: right;
+    padding: 4px 5px 4px 20px;
+    color: #546166;
+    @include pts_b;
+    font-size: 12px;
+    background: #e1e1e1;
+    div {
+        float: left;
+        width: 195px;
+        line-height: 1.2;
+        span {
+            display: block;
+        }
+    }
+    button {
+        width: 122px;
+        height: 27px;
+        line-height: 27px;
+        border: 0;
+        color: #fff;
+        font-size: 15px;
+        @include pts_b;
+        @include border-radius(2px);
+        @include background-image(linear-gradient(#b5b5b5, #9e9e9e));
+        &:hover {
+           @include background-image(linear-gradient(#9e9e9e, #b5b5b5));
+        }
+        &:active {
+           @include box-shadow(inset 0 0 10px rgba(0,0,0,0.5));
+        }
+    }
+
+}
+
+// buttons
+
+
+/* --------------------------------------- Blocks ---------------------------------------- */
+ 
