--- a/sass/common.scss
+++ b/sass/common.scss
@@ -89,8 +89,7 @@ body {
     @include pts_r;
     font-size: 13px;
     line-height: 1.4;
-    background: #e1e1e1;
-    height: 2000px;
+    background: #ececec;
 }
 a {
     &:hover {
@@ -98,21 +97,17 @@ a {
     }
 }
 .l-layout {
-    margin: 0 auto -1px;
-    position: relative;
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-}
-.push {
-    clear: both;
-    height: 1px;
+    padding-bottom: 10px;
 }
 .wrapper {  
     overflow: hidden;
 } 
 .wrap {
     @extend %clr;
+}
+.section {
+    @extend %clr;
+    background: #e1e1e1;
 }
 .sidebar {
     float: left;
@@ -123,7 +118,6 @@ a {
     padding: 0 16px 0 11px;
     overflow: hidden;
     background: #ececec;
-    height: 500px;
 }
 
 .header {
@@ -163,19 +157,21 @@ a {
     float: right;
     @extend %clr;
     padding-right: 16px;
-}
-.header__search {
-    float: left;
-    position: relative;
-    margin-top: 9px;
-    width: 227px;
-    &:after {
-        content: "";
-        position: absolute;
-        right: -10px;
-        top: 6px;
-        @include sized-sprite($icons, separator);
+    .search {
+        float: left;
+        margin-top: 9px;
+        width: 227px;
+        &:after {
+            content: "";
+            position: absolute;
+            right: -10px;
+            top: 6px;
+            @include sized-sprite($icons, separator);
+        }
     }
+}
+.search {
+    position: relative;
     input[type="text"] {
         padding: 0 28px 0 10px;
         width: 100%;
@@ -266,12 +262,11 @@ a {
 .header__user {
     float: left;
     margin: 3px 0 0 10px;
-    a {
+    .pic {
         display: inline-block;
+        width: 33px;
+        height: 33px;
         vertical-align: middle;
-    }
-    img {
-        display: block;
         border: 2px solid #fff;
         @include border-radius(50%);
     }
@@ -299,6 +294,14 @@ a {
     .icon {
         cursor: pointer;
     }
+    .progress {
+        margin-bottom: 15px;
+        padding: 0 8px;
+    }
+    .btn-watch {
+        float: right;
+        margin-top: -12px;
+    }
 }
 .download-list__title {
     padding: 0 8px;
@@ -321,8 +324,6 @@ a {
     }
 }
 .progress {
-    margin-bottom: 15px;
-    padding: 0 8px;
     a {
         color: #fff;
     }
@@ -332,6 +333,7 @@ a {
     }
     .icon {
         vertical-align: middle;
+        cursor: pointer;
     }
     .icon_del {
         margin-left: 7px;
@@ -349,14 +351,13 @@ a {
     vertical-align: middle;
 }
 .btn-watch {
-   float: right;
-   margin-top: -12px;
    height: 30px;
-   line-height: 30px;
+   line-height: 33px;
    padding: 0 10px; 
    color: #fff;
    font-size: 15px;
    @include pts_b;
+   border: none;
    text-decoration: none;
    @include background-image(linear-gradient(#00c400, #00a300));
    @include border-radius(2px);
@@ -364,7 +365,7 @@ a {
        @include background-image(linear-gradient(#00a300, #00c400));
    }
    &:active {
-       @include box-shadow(inset 0 0 2px #000);
+       @include background-image(linear-gradient(#00b100, #008a00));
    }
 }
 .progress_cancel {
@@ -399,7 +400,7 @@ a {
     a {
         color: #fff;
         text-decoration: none;
-    }
+    } 
 }
 /* ------------------------------------ //END Main styles -------------------------------------- */
 
@@ -409,126 +410,50 @@ a {
     @include user-select(none);
 }
 .icon_pause {@include sized-sprite($icons, pause);}
+.icon_pause-2 {@include sized-sprite($icons, pause2);}
 .icon_play {@include sized-sprite($icons, play);}
 .icon_del {@include sized-sprite($icons, del);}
+.icon_del-2 {@include sized-sprite($icons, del2);}
+.icon_trash {@include sized-sprite($icons, trash);}
+.icon_file {@include sized-sprite($icons, file);}
+.icon_eye-s {@include sized-sprite($icons, eye-s);}
+.icon_prev {@include sized-sprite($icons, prev);}
+.icon_next {@include sized-sprite($icons, next);}
+.icon_imdb {@include sized-sprite($icons, imdb);}
+.icon_kinopoisk {@include sized-sprite($icons, kinopoisk);}
+.icon_star-s {@include sized-sprite($icons, star-s);}
 
-.meter { 
-    width: 224px;
-    height: 11px;  /* Can be anything */
-    position: relative;
-    background: #fff;
-    @include border-radius(20px);
-}
-.meter > span {
-    position: relative;
-    overflow: hidden;
-    display: block;
-    height: 100%;
-    @include border-radius(20px 0 0 20px);
-    @include background-image(linear-gradient(rgb(136,204,97) 37%, rgb(160,214,129) 69%));
-    @include box-shadow (inset 0 2px 9px  rgba(255,255,255,0.3), inset 0 -2px 6px rgba(0,0,0,0.4));   
-}
-.meter > span:after, .animate > span > span {
-    content: "";
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    bottom: 0; 
-    right: 0;
-    background-image: 
-       -webkit-gradient(linear, 0 0, 100% 100%, 
-          color-stop(.25, rgba(255, 255, 255, .2)), 
-          color-stop(.25, transparent), color-stop(.5, transparent), 
-          color-stop(.5, rgba(255, 255, 255, .2)), 
-          color-stop(.75, rgba(255, 255, 255, .2)), 
-          color-stop(.75, transparent), to(transparent)
-       );
-    z-index: 1;
-    @include background-size(50px, 50px);
-    -webkit-animation: move 2s linear infinite;
-    @include border-radius(20px 8px 8px 20px);
-    overflow: hidden;
-}
-.animate > span:after {
-    display: none;
-}
-@-webkit-keyframes move {
-    0% {
-       background-position: 0 0;
-    }
-    100% {
-       background-position: 50px 50px;
-    }
-}
-
-.nav-wrap {
-    @extend %clr;
-    padding-top: 8px; 
-}
-.nav {
-    padding-top: 5px;
-    float: left;
-    @extend %clr;
-    a {
-        float: left;
-        margin-right: 5px;
-        padding: 0 5px;
-        height: 25px;
-        line-height: 25px;
-        color: #fff;
-        text-decoration: none;
-        @include border-radius(2px);
-        @include background-image(linear-gradient(#5d5d5d, #464646));
-        &:hover {
-           @include background-image(linear-gradient(#464646, #5d5d5d));
-        }
-        &:active {
-           @include box-shadow(inset 0 0 3px #000);
-        }
-    }
-    .active {
-        @include background-image(linear-gradient(#00bd00, #00ad00));
-        &:hover {
-           @include background-image(linear-gradient(#00ad00, #00bd00));
-       }
-    }
-}
-.disk-space {
-    float: right;
-    padding: 4px 5px 4px 20px;
-    color: #546166;
-    @include pts_b;
-    font-size: 12px;
-    background: #e1e1e1;
-    div {
-        float: left;
-        width: 195px;
-        line-height: 1.2;
-        span {
-            display: block;
-        }
-    }
-    button {
-        width: 122px;
-        height: 27px;
-        line-height: 27px;
-        border: 0;
-        color: #fff;
-        font-size: 15px;
-        @include pts_b;
-        @include border-radius(2px);
-        @include background-image(linear-gradient(#b5b5b5, #9e9e9e));
-        &:hover {
-           @include background-image(linear-gradient(#9e9e9e, #b5b5b5));
-        }
-        &:active {
-           @include box-shadow(inset 0 0 10px rgba(0,0,0,0.5));
-        }
-    }
-
-}
+.icon_mark {@include sized-sprite($icons, mark);}
+.icon_mark-act {@include sized-sprite($icons, mark-act);}
+.icon_star {@include sized-sprite($icons, star);}
+.icon_star-act {@include sized-sprite($icons, star-act);}
+.icon_eye {@include sized-sprite($icons, eye);}
+.icon_eye-act {@include sized-sprite($icons, eye-act);}
+.icon_delite {@include sized-sprite($icons,delite);}
+.icon_delite-act {@include sized-sprite($icons,delite-act);}
 
 // buttons
+
+.btn { 
+    display: inline-block;
+    width: 142px;
+    height: 36px;
+    line-height: 36px;
+    border: 0;
+    color: #fff;
+    font-size: 15px;
+    text-align: center;
+    vertical-align: middle;
+    @include pts_b;
+    @include border-radius(2px);
+    @include background-image(linear-gradient(#16b5e2, #078fd0));
+    &:hover {
+        @include background-image(linear-gradient(#078fd0, #16b5e2));
+    }
+    &:active {
+        @include background-image(linear-gradient(#0b91b5, #03628f));
+    }
+}
 
 
 /* --------------------------------------- Blocks ---------------------------------------- */
