--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,2 +1,588 @@
 @import "base";
   
+// meter animate
+.meter { 
+    width: 224px;
+    height: 11px;  /* Can be anything */
+    position: relative;
+    background: #fff;
+    @include border-radius(20px);
+}
+.meter > span {
+    position: relative;
+    overflow: hidden;
+    display: block;
+    height: 100%;
+    @include border-radius(20px 0 0 20px);
+    @include background-image(linear-gradient(rgb(136,204,97) 37%, rgb(160,214,129) 69%));
+    @include box-shadow (inset 0 2px 9px  rgba(255,255,255,0.3), inset 0 -2px 6px rgba(0,0,0,0.4));   
+}
+.meter > span:after, .animate > span > span {
+    content: "";
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    bottom: 0; 
+    right: 0;
+    background-image: 
+       -webkit-gradient(linear, 0 0, 100% 100%, 
+          color-stop(.25, rgba(255, 255, 255, .2)), 
+          color-stop(.25, transparent), color-stop(.5, transparent), 
+          color-stop(.5, rgba(255, 255, 255, .2)), 
+          color-stop(.75, rgba(255, 255, 255, .2)), 
+          color-stop(.75, transparent), to(transparent)
+       );
+    z-index: 1;
+    @include background-size(50px, 50px);
+    -webkit-animation: move 2s linear infinite;
+    @include border-radius(20px 8px 8px 20px);
+    overflow: hidden;
+}
+.animate > span:after {
+    display: none;
+}
+@-webkit-keyframes move {
+    0% {
+       background-position: 0 0;
+    }
+    100% {
+       background-position: 50px 50px;
+    }
+}
+
+// navigation
+.nav-wrap {
+    @extend %clr;
+    margin-bottom: 10px;
+    padding: 8px 0 10px; 
+    background: #ececec;
+}
+.nav {
+    padding-top: 5px;
+    float: left;
+    @extend %clr;
+    a {
+        float: left;
+        margin-right: 5px;
+        padding: 0 5px;
+        height: 25px;
+        line-height: 25px;
+        color: #fff;
+        text-decoration: none;
+        @include border-radius(2px);
+        @include background-image(linear-gradient(#5d5d5d, #464646));
+        &:hover {
+           @include background-image(linear-gradient(#464646, #5d5d5d));
+        }
+        &:active {
+           @include box-shadow(inset 0 0 3px #000);
+        }
+    }
+    .active {
+        @include background-image(linear-gradient(#00bd00, #00ad00));
+        &:hover {
+           @include background-image(linear-gradient(#00ad00, #00bd00));
+       }
+    }
+}
+.disk-space {
+    float: right;
+    padding: 4px 5px 3px 18px;
+    color: #546166;
+    @include pts_b;
+    font-size: 12px;
+    background: #e1e1e1;
+    div {
+        float: left;
+        width: 195px;
+        line-height: 1.2;
+        span {
+            display: block;
+        }
+    }
+    button {
+        width: 122px;
+        height: 27px;
+        line-height: 27px;
+        border: 0;
+        color: #fff;
+        font-size: 15px;
+        @include pts_b;
+        @include border-radius(2px);
+        @include background-image(linear-gradient(#b5b5b5, #9e9e9e));
+        &:hover {
+           @include background-image(linear-gradient(#9e9e9e, #b5b5b5));
+        }
+        &:active {
+           @include box-shadow(inset 0 0 10px rgba(0,0,0,0.5));
+        }
+    }
+
+}
+
+// items
+.film {
+    display: inline-block;
+    margin: 0 15px 18px 0;
+    padding: 11px 2px 16px;
+    width: 214px;
+    background: #fff;
+    border: 1px solid #dbdbdb;
+    @include border-radius(2px);
+    @include box-sizing(border-box);
+    vertical-align: top;
+    .btn {
+        margin-right: 7px;
+    }
+    .meter {
+        margin-right: 7px;
+        width: 144px;
+        @include box-shadow(inset 0 1px 4px rgba(0,0,0,.5))
+    }
+    .meter > span {
+        @include background-image(linear-gradient(#7da6e0 37%, #5d90d8 69%));
+    }
+    .progress__percent {
+        display: block;
+        margin: 8px 0 -5px;
+        color: #396dbc;
+        text-align: center;
+    }
+    .icon_del {
+        margin-left: 2px;
+    }
+}
+.film__img {
+    display: block;
+    text-align: center;
+}
+.film__title {
+    padding: 3px 8px;
+    font-size: 14px;
+    @include pts_b;
+    text-align: center;
+    a {
+        text-decoration: none;
+        color: #0ba5dc;
+    }
+    span {
+        display: block;
+        color: #546166;
+        font-size: 11px;
+    }
+    strong {
+        color: #b700a8;
+        font-weight: normal;
+    }
+    b {
+        font-weight: normal;
+        color: #d84c4c;
+    }
+}
+.film__watch {
+    padding: 8px 8px 0;
+    position: relative;
+    border-top: 1px dotted #e4e4e4;
+    .icon_prev,
+    .icon_next {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        z-index: 5000;
+        cursor: pointer;
+        background-color: #fff;
+    }
+    .icon_prev {
+        left: 8px; 
+    }
+    .disabled {
+        display: none;
+    }
+}
+
+.film_new {
+    .film__title {
+        text-align: left;
+    }
+}
+
+.film__rate {
+    margin: 3px 0 10px;
+    padding: 8px 6px 4px;
+    font-size: 11px;
+    color: #929292;
+    border-bottom: 1px dotted #e4e4e4;
+    border-top: 1px dotted #e4e4e4;
+    li {
+        margin-bottom: 3px;
+    }
+    b {
+        font-weight: normal;
+        color: #000;
+        font-size: 13px;
+    }
+    .icon {
+        margin-right: 5px;
+    }
+    .icon_kinopoisk {
+        margin-left: 15px;
+    }
+}
+.film__pop-rate {
+    margin: 10px 0;
+    padding-bottom: 8px;
+    color: #333;
+    font-size: 12px;
+    border-bottom: 1px dotted #e4e4e4;
+    span {
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        @include sized-sprite($icons, pop-rate)
+    }
+}
+.film__edit {
+    @include user-select(none);
+    text-align: center;
+    .icon {
+        margin-right: 2px;
+        cursor: pointer;
+    }
+    .mark {
+        margin-top: 13px;
+    }
+}
+
+.drop-list-wrap {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+}
+.btn-drop-list {
+    display: block;
+    position: relative;
+    z-index: 2000;
+    width: 40px;
+    height: 36px;
+    line-height: 36px;
+    border: 0;
+    @include border-radius(2px);
+    @include background-image(linear-gradient(#d7d7d7, #b7b7b7));
+    &:before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -3px 0 0 -5px;
+        @include sized-sprite($icons, arr2);
+    }
+    &:hover {
+        @include background-image(linear-gradient(#b7b7b7, #d7d7d7));
+    }
+    &:active {
+        @include box-shadow(inset 0 0 4px rgba(0,0,0,.2));
+    }
+}
+.btn-drop-list_active {
+    background: #fff;
+    border: 1px solid #dcdcdc;
+    border-bottom: 0;
+    @include border-radius(2px 2px 0 0);
+    &:before {
+        @include sized-sprite($icons, arr3);
+    }
+    &:after {
+        content: "";
+        position: absolute;
+        bottom: -7px;
+        left: -1px;
+        height: 8px;
+        width: 100%;
+        background: #fff;
+        border-left: 1px solid #dcdcdc;
+        border-right: 1px solid #dcdcdc;
+    }
+    &:hover {
+        background: #fff;
+    }
+    &:active {
+        @include box-shadow(none);
+    }
+}
+
+.film-drop-list {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 42px;
+    width: 192px;
+    z-index: 1000;
+    padding: 15px 9px 0;
+    color: #0ba5dc;
+    font-size: 12px;
+    background: #fff;
+    border: 1px solid #dcdcdc;
+    @include box-sizing(border-box);
+    @include border-radius(3px 0 3px 3px);
+    @include box-shadow(0 9px 10px rgba(0,0,0,.5));
+    li {
+        margin-bottom: 15px;
+        cursor: pointer; 
+        &:last-child {
+            color: #dc0b0b;
+        }
+    }
+    .icon {
+        margin-right: 5px;
+    }
+}
+
+.film__more {
+    margin-top: 12px;
+    padding-top: 10px;
+    border-top: 1px dotted #e4e4e4;
+}
+.btn-more {
+    display: block;
+    margin:  auto;
+    height: 30px;
+    width: 192px;
+    line-height: 30px;
+    border: 0;
+    color: #fff;
+    font-size: 15px;
+    @include pts_b;
+    @include border-radius(2px);
+    @include background-image(linear-gradient(#cecdcd 30%, #c9c9c9 30%, #c9c9c9 100%));
+    &:hover {
+        @include background-image(linear-gradient(#c9c9c9 30%, #cecdcd 30%, #cecdcd 100%));
+    }
+    &:active {
+        @include box-shadow(inset 0 0 4px rgba(0,0,0,.3));
+    }
+}
+
+// Block with text info
+.text-block {
+    margin: 55px 0 31px;
+    padding: 6px 20px 20px;
+    background: #fff;
+    @include border-radius(5px);
+    h2 {
+        position: relative;
+        margin: 7px 0 5px;
+        font-size: 24px;
+        font-weight: normal;
+    }
+    p {
+        margin-bottom: 4px;
+    }
+    ul {
+        padding-left: 30px;
+        color: #546166;
+        font-size: 12px;
+    }
+    li {
+        margin-bottom: 3px;
+        &:before {
+            content: "+";
+            padding-right: 5px;
+            font-size: 8px;
+        }
+    }
+    a {
+        color: #1babde;
+    }
+    .note {
+        color: #999;
+    }
+    .search {
+        margin-bottom: 23px;
+        input[type="text"] {
+            padding-right: 35px;
+            border: 1px solid #aeaeae;
+            @include placeholder-color(#546166);
+            &:focus {
+                padding-left: 11px;
+                border: 0;
+            }
+        }
+        input[type="submit"] {
+            right: 0;
+            padding-right: 30px;
+        }
+    }
+}
+
+.i-dont-watch {
+    float: right;
+    position: relative;
+    margin-right: 17px;
+    color: #0ba5dc;
+    font-size: 12px;
+    border-bottom: 1px dotted;
+    cursor: pointer;
+    @include user-select(none);
+    .icon {
+        position: absolute;
+        right: -26px;
+        top: 0;
+    }
+}
+
+.series-scroll {
+    position: relative;
+    height: 62px;
+    .series-title {
+        display: block;
+        text-align: center;
+        margin-bottom: 8px;
+    }
+}
+.series-scroll.active {
+    overflow: visible !important;
+}
+.series-scroll__item {
+    position: absolute;
+}
+
+.film__opt {
+    padding: 7px 9px 0 9px;
+    border-top: 1px dotted #e4e4e4; 
+    .btn-watch {
+        display: block;
+        margin: 0 auto 5px;
+        width: 100%;
+        height: 36px;
+        line-height: 39px;
+    }
+    .btn {
+        width: 100%;
+    }
+}
+.film__opt-title {
+    display: block;
+    @include pts_b;
+    color: #546166;
+    font-size: 15px;  
+    text-align: center;
+}
+.select {
+    position: relative;
+    margin-bottom: 6px;
+    ul {
+        display: none;
+        position: absolute;
+        z-index: 1000;
+        top: 24px;
+        left: 0;
+        padding: 3px 10px 5px;
+        width: 190px;
+        background: #fff;
+        @include border-radius(3px);
+        border: 1px solid #dcdcdc;
+        @include box-sizing(border-box);
+    }
+    li {
+        cursor: pointer;
+        &:hover {
+            color: #0ba5dc;
+        }
+    }
+}
+.select__wrap { 
+    position: relative;
+    display: block;
+    padding: 0 10px;
+    height: 25px;
+    width: 190px;
+    line-height: 25px;
+    border: 1px solid #dcdcdc;
+    color: #546166;
+    cursor: pointer;
+    @include pts_b;
+    font-size: 11px;
+    @include border-radius(3px);
+    @include box-sizing(border-box);
+    @include user-select(none); 
+    @include background-image(linear-gradient(#fefefe, #e6e6e6));
+    &:after {
+        content: "";
+        position: absolute;
+        right: 20px;
+        top: 10px;
+        @include sized-sprite($icons, arr4);
+    }
+    span {
+        display: inline-block;
+        margin-left: 5px;
+        @include pts_r;
+    }
+}
+.film__size {
+    display: block;
+    margin: 0 auto 13px;
+    height: 25px;
+    width: 190px;
+    line-height: 25px;
+    @include box-sizing(border-box);
+    border: 1px solid #dcdcdc;
+    @include border-radius(3px);
+    @include pts_b;
+    font-size: 11px;
+    color: #546166;
+    text-align: center;
+}
+.mark {
+    line-height: 1;
+    color: #546166;
+    font-size: 12px;
+    span {
+        display: inline-block;
+        margin-right: 11px;
+        vertical-align: middle;
+    }
+    .icon {
+        cursor: pointer;
+        margin-right: -4px;
+        vertical-align: middle;
+    }
+}
+.watch-status {
+    margin: 14px 0 -3px;
+    padding: 0 8px;
+    button {
+        display: inline-block;
+        padding: 0;
+        border: 1px solid #dcdcdc;
+        height: 25px;
+        width: 94px;
+        color: #546166;
+        font-size: 11px;
+        @include box-sizing(border-box);
+        @include background-image(linear-gradient(#fefefe, #e6e6e6));
+        &:first-child {
+            margin-right: -3px;  
+            border-right: 1px solid #fefefe;
+            @include border-radius(2px 0 0 2px);
+        }
+        &:last-child {
+            @include border-radius(0 2px 2px 0);
+        }
+    }
+    .active {
+        background: #e3e3e3;
+        @include box-shadow(inset 0 0 5px rgba(0,0,0,.37));
+    }
+}
+.no-more {
+    margin-top: 13px;
+    text-align: center;
+    span {
+        color: #0ba5dc;
+        font-size: 14px;
+        cursor: pointer;
+        @include pts_b;
+        border-bottom: 1px dotted;
+    }
+}
