--- a/sass/common.scss
+++ b/sass/common.scss
@@ -97,7 +97,7 @@ a {
     }
 }
 .l-layout {
-    padding-bottom: 10px;
+    padding: 46px 0 10px;
 }
 .wrapper {  
     overflow: hidden;
@@ -109,7 +109,14 @@ a {
     @extend %clr;
     background: #e1e1e1;
 }
-
+.section_act {
+    .main {
+        padding-top: 50px;
+    }
+    .sidebar {
+        padding-top: 20px;
+    }
+}
 .main {
     padding: 0 16px 0 11px;
     overflow: hidden;
@@ -120,6 +127,11 @@ a {
 
 /* ------------------------------------------ Header ----------------------------------------- */
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10000;
     @extend %clr;
     background: #000;
     height: 45px;
@@ -128,13 +140,14 @@ a {
 .header__nav {
     float: left;
     padding: 9px 0 0 161px;
-    a {
+    button {
        display: inline-block;
        margin-right: 7px;
        height: 26px;
        line-height: 26px;
        padding: 0 10px; 
        color: #fff;
+       border: 0;
        text-decoration: none;
        @include background-image(linear-gradient(#5d5d5d, #464646));
        @include border-radius(2px);
