--- a/sass/common.scss
+++ b/sass/common.scss
@@ -110,9 +110,9 @@ a {
     background: #e1e1e1;
 }
 .section_act {
-    .main {
-        padding-top: 50px;
-    }
+    // .main {
+    //     padding-top: 50px;
+    // }
     .sidebar {
         padding-top: 20px;
     }
