--- a/sass/index.scss
+++ b/sass/index.scss
@@ -131,6 +131,9 @@
 .film-wrap {
     @extend %clr;
 }
+.film-wrap_act {
+    margin-top: 80px;
+}
 .film {
     float: left;
     margin: 0 18px 18px 0;
