--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 @-webkit-keyframes move { 0% { background-position: 0 0; }
   100% { background-position: 50px 50px; } }
 
-.nav-wrap { margin-bottom: 10px; padding: 8px 0 10px; background: #ececec; }
+.nav-wrap { margin-bottom: 10px; padding: 8px 0 10px; min-width: 908px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; background: #ececec; }
 
 .nav-wrap_act { position: fixed; top: 46px; z-index: 10000; left: 161px; right: 16px; }
 
