--- a/sass/index.scss
+++ b/sass/index.scss
@@ -55,6 +55,8 @@
     @extend %clr;
     margin-bottom: 10px;
     padding: 8px 0 10px; 
+    min-width: 908px; 
+    @include box-sizing(border-box);
     background: #ececec;
 }
 .nav-wrap_act {
