--- a/sass/index.scss
+++ b/sass/index.scss
@@ -52,6 +52,7 @@
 
 // navigation
 .nav-wrap {
+    position: relative;
     @extend %clr;
     margin-bottom: 10px;
     padding: 8px 0 10px; 
@@ -65,6 +66,15 @@
     z-index: 10000;
     left: 161px;
     right: 16px;
+    .shadow {
+        position: absolute; 
+        left: 0;
+        bottom: -25px;
+        width: 100%;
+        height: 25px;
+        opacity: 0;
+        @include background-image(linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,0)));
+    } 
 }
 .nav {
     padding-top: 5px;
@@ -95,7 +105,10 @@
     }
 }
 .disk-space {
-    float: right;
+    position: fixed;
+    right: 16px;
+    top: 54px;
+    z-index: 20000;
     padding: 4px 5px 3px 18px;
     color: #546166;
     @include pts_b;
