--- a/sass/sidebar.scss
+++ b/sass/sidebar.scss
@@ -14,6 +14,9 @@
 }
 .filter-wrap_act {
     position: fixed;
+   // top: 60px;
+}
+.js-filter-2.filter-wrap_act {
     top: 60px !important;
 }
 .sidebar__title {
