--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 .search input[type="submit"] { font: 0/0 a; text-shadow: none; color: transparent; }
 
-.wrap:after, .section:after, .header:after, .header__main:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
+.header:after, .header__main:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
 
 @font-face { font-family: 'pt_sansregular'; src: url("../fonts/pts55f-webfont.woff") format("woff"); }
 
@@ -55,13 +55,13 @@ a:hover { text-decoration: none; }
 
 .l-layout { padding: 46px 0 0; }
 
-.wrapper { overflow: hidden; }
-
 .section { background: #e1e1e1; }
 
 .section_act .sidebar { padding-top: 20px; }
 
-.main { padding: 0 16px 0 11px; overflow: hidden; background: #ececec; }
+.main { padding: 0 16px 40px 11px; overflow: hidden; background: #ececec; }
+
+.clr { clear: both; }
 
 /* ----------------------------------- //END Main styles -------------------------------------- */
 /* ------------------------------------------ Header ----------------------------------------- */
