--- a/sass/index.scss
+++ b/sass/index.scss
@@ -67,12 +67,12 @@
     left: 161px;
     right: 16px;
     .shadow {
+        display: none;
         position: absolute; 
         left: 0;
         bottom: -25px;
         width: 100%;
         height: 25px;
-        opacity: 0;
         @include background-image(linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,0)));
     } 
 }
@@ -153,7 +153,7 @@
     float: left;
     margin: 0 18px 18px 0;
     padding: 11px 2px 16px;
-    width: 214px;
+    //width: 214px;
     background: #fff;
     border: 1px solid #dbdbdb;
     @include border-radius(2px);
@@ -181,6 +181,7 @@
     }
 }
 .film__img {
+    margin: 0 9px;
     display: block;
     text-align: center;
     img {
@@ -273,7 +274,7 @@
         @include sized-sprite($icons, pop-rate)
     }
 }
-.film__edit {
+.film__action {
     @include user-select(none);
     text-align: center;
     .icon {
@@ -448,7 +449,7 @@
     }
 }
 
-.i-dont-watch {
+.i-dont-watch { 
     float: right;
     position: relative;
     margin-right: 17px;
@@ -457,10 +458,22 @@
     border-bottom: 1px dotted;
     cursor: pointer;
     @include user-select(none);
-    .icon {
+    &:hover {
+        color: #ff7800;
+        i {
+            @include sized-sprite($icons, del2-h);
+        }
+    }
+    &:active {
+        i {
+           @include sized-sprite($icons, del2-act); 
+        }
+    }
+    i {
         position: absolute;
         right: -26px;
         top: 0;
+        @include sized-sprite($icons, del2);
     }
 }
 
@@ -503,8 +516,14 @@
 }
 .select-film-opt {
     margin-bottom: 6px;
+    span.active {
+        background: #f5f5f5;
+        z-index: 1001;
+        border-bottom: #000;
+        @include border-radius(3px 3px 0 0);
+    }
     ul {
-        top: 24px;
+        top: 23px;
         width: 190px;
         @include border-radius(3px);
         border: 1px solid #dcdcdc;
@@ -535,6 +554,54 @@
         }
     }
 }
+.select_source { 
+    ul {
+        width: 387px;
+    }
+    li {
+        margin-bottom: 5px;
+        padding-top: 4px;
+        overflow: hidden;
+    }
+    .source {
+        width: 122px;
+        i, a {
+            display: inline-block;
+            vertical-align: middle;
+        }
+        a {
+            margin-right: 2px;
+            color: #0ba5dc;
+            font-size: 11px;
+            text-decoration: none;
+            .icon {
+                margin-right: 3px;
+            }
+        }
+    }
+    .lang {
+        margin-right: 16px;
+        color: #a4abad;
+    }
+    .quant {
+        width: 100px;
+        @include pts_b;
+        color: #a4abad;
+        font-size: 11px;
+        .icon {
+            opacity: .6;
+            //vertical-align: middle;
+        }
+        span {
+            vertical-align: bottom;
+        }
+    }
+    .source, .quant, .lang {
+        display: inline-block;
+        vertical-align: bottom;
+    }
+}
+
 
 .film__size {
     display: block;
@@ -569,6 +636,7 @@
     margin: 14px 0 -3px;
     padding: 0 8px;
     button {
+        position: relative;
         display: inline-block;
         padding: 0;
         border: 1px solid #dcdcdc;
@@ -578,10 +646,20 @@
         font-size: 11px;
         @include box-sizing(border-box);
         @include background-image(linear-gradient(#fefefe, #e6e6e6));
+        &:hover {
+            @include background-image(linear-gradient(#f1f1f1, #dcdcdc));
+        }
+        &:active {
+            z-index: 2;
+            border: 1px solid #979797;
+            @include box-shadow(inset 0 0 5px rgba(0,0,0,.37));
+        }
         &:first-child {
-            margin-right: -3px;  
-            border-right: 1px solid #fefefe;
+            margin-right: -4px;  
             @include border-radius(2px 0 0 2px);
+            &:active {
+                border: 1px solid #979797;
+            }
         }
         &:last-child {
             @include border-radius(0 2px 2px 0);
@@ -603,4 +681,3 @@
         border-bottom: 1px dotted;
     }
 }
-
