--- a/css/screen.css
+++ b/css/screen.css
@@ -268,6 +268,8 @@ a:hover { text-decoration: none; }
 .film .progress__percent { display: block; margin: 8px 0 -5px; color: #396dbc; text-align: center; }
 .film .icon_del { margin-left: 2px; }
 
+.film_act { width: 428px; }
+
 .film__img { margin: 0 9px; display: block; text-align: center; }
 .film__img img { width: 190px; height: 269px; }
 
@@ -345,6 +347,7 @@ a:hover { text-decoration: none; }
 
 .series-scroll { position: relative; height: 62px; }
 .series-scroll .series-title { display: block; text-align: center; margin-bottom: 8px; }
+.series-scroll .btn-wrap { display: inline-block; }
 
 .series-scroll.active { overflow: visible !important; }
 
