--- a/sass/index.scss
+++ b/sass/index.scss
@@ -180,12 +180,12 @@
         margin-left: 2px;
     }
 }
-.film_width {
-    width: 428px;
-    .series-scroll__item {
-        width: 100%;
-    }
-}
+// .film_width {
+//     width: 428px;
+//     .series-scroll__item {
+//         width: 100%;
+//     }
+// }
 .film__img {
     margin: 0 9px;
     display: block;
