--- a/css/screen.css
+++ b/css/screen.css
@@ -268,9 +268,6 @@ a:hover { text-decoration: none; }
 .film .progress__percent { display: block; margin: 8px 0 -5px; color: #396dbc; text-align: center; }
 .film .icon_del { margin-left: 2px; }
 
-.film_width { width: 428px; }
-.film_width .series-scroll__item { width: 100%; }
-
 .film__img { margin: 0 9px; display: block; text-align: center; }
 .film__img img { width: 190px; height: 269px; }
 
@@ -438,10 +435,10 @@ a:hover { text-decoration: none; }
 
 .filter-list__wrap { padding: 0 3px 0 6px; }
 .filter-list__wrap ul li { margin-bottom: 7px; height: 18px; line-height: 18px; cursor: pointer; -moz-user-select: none; -webkit-user-select: none; user-select: none; }
-.filter-list__wrap ul li:hover { color: #00b400; }
-.filter-list__wrap ul li:hover .icon_minus { background: url('../img/icons-sb16e2c7aec.png') 0 -1234px no-repeat; width: 12px; height: 12px; }
 .filter-list__wrap ul li span { display: inline-block; width: 85px; margin-right: -3px; }
+.filter-list__wrap ul li span:hover { color: #00b400; }
 .filter-list__wrap ul li .icon_plus:hover { background: url('../img/icons-sb16e2c7aec.png') 0 -1347px no-repeat; width: 12px; height: 12px; }
+.filter-list__wrap ul li .icon_minus:hover { background: url('../img/icons-sb16e2c7aec.png') 0 -1234px no-repeat; width: 12px; height: 12px; }
 .filter-list__wrap ul .inactive { color: #d5d5d5; cursor: default; }
 .filter-list__wrap ul .inactive:hover { color: #d5d5d5; }
 .filter-list__wrap ul .inactive:hover .icon_plus { background: url('../img/icons-sb16e2c7aec.png') 0 -1277px no-repeat; width: 12px; height: 12px; }
