--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -35,10 +35,10 @@
 
 .filter-list__wrap { padding: 0 3px 0 6px; }
 .filter-list__wrap ul li { margin-bottom: 7px; height: 18px; line-height: 18px; cursor: pointer; -moz-user-select: none; -webkit-user-select: none; user-select: none; }
-.filter-list__wrap ul li:hover { color: #00b400; }
-.filter-list__wrap ul li:hover .icon_minus { background: url('../img/icons-sb16e2c7aec.png') 0 -1234px no-repeat; width: 12px; height: 12px; }
 .filter-list__wrap ul li span { display: inline-block; width: 85px; margin-right: -3px; }
+.filter-list__wrap ul li span:hover { color: #00b400; }
 .filter-list__wrap ul li .icon_plus:hover { background: url('../img/icons-sb16e2c7aec.png') 0 -1347px no-repeat; width: 12px; height: 12px; }
+.filter-list__wrap ul li .icon_minus:hover { background: url('../img/icons-sb16e2c7aec.png') 0 -1234px no-repeat; width: 12px; height: 12px; }
 .filter-list__wrap ul .inactive { color: #d5d5d5; cursor: default; }
 .filter-list__wrap ul .inactive:hover { color: #d5d5d5; }
 .filter-list__wrap ul .inactive:hover .icon_plus { background: url('../img/icons-sb16e2c7aec.png') 0 -1277px no-repeat; width: 12px; height: 12px; }
